# NoIT

./: .gitignore  README.md  main.py  pyproject.toml
alg/: algs_list.py  handle_testing.py  report_maker.py  testing_handlers.py
alg/metric/: alg1.py  alg2.py  alg3.py  mean_alg.py  neg_alg.py  pos_alg.py  precedence_alg.py  precedence_dichotomy.py  precedence_dichotomy_upgraded.py
eda/: eda_handlers.py  encoding_handlers.py  utils.py
ui/: dialog_window.py  file_loader.py  flow_line.py  main_widget.py  pipeline.py  pulse_wave.py  styles.py
ui/ui_objects/: draggable_table.py  flow_line.py  pulse_wave.py
ui/widgets/: alg_chooser.py  animated_window.py  dialog_window.py  file_loader.py  main_widget.py  pipeline.py  progress_bar.py  static_info.py
