[tool.poetry]
name = "noit"
version = "0.1.0"
description = ""
authors = ["Nitroxt5 <filippov.maxim52@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.0"
pandas = "2.2.3"
scikit-learn = "1.6.1"
py-cpuinfo = "9.0.0"
gputil = "1.4.0"
psutil = "5.9.0"
pyqt5 = "5.15.11"
matplotlib = "3.9.4"
seaborn = "0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
